--- a/Views/Swimming/Delete.cshtml
+++ b/Views/Swimming/Delete.cshtml
@@ -47,6 +47,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PoolDays)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolDays)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolDays)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolSize)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolSize)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolReviews)
+        </dt>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolReviews)
+        </dt>
     </dl>
     
     <form asp-action="Delete">
