--- a/Views/Swimming/Details.cshtml
+++ b/Views/Swimming/Details.cshtml
@@ -46,6 +46,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.PoolDays)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolSize)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PoolSize)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.PoolReviews)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PoolReviews)
+        </dd>
     </dl>
 </div>
 <div>
