--- a/Views/Swimming/Create.cshtml
+++ b/Views/Swimming/Create.cshtml
@@ -42,6 +42,16 @@
                 <input asp-for="PoolDays" class="form-control" />
                 <span asp-validation-for="PoolDays" class="text-danger"></span>
             </div>
+             <div class="form-group">
+                <label asp-for="PoolSize" class="control-label"></label>
+                <input asp-for="PoolSize" class="form-control" />
+                <span asp-validation-for="PoolSize" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="PoolReviews" class="control-label"></label>
+                <input asp-for="PoolReviews" class="form-control" />
+                <span asp-validation-for="PoolReviews" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
