--- a/Views/Swimming/Index.cshtml
+++ b/Views/Swimming/Index.cshtml
@@ -30,6 +30,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.PoolDays)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PoolSize)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.PoolReviews)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +59,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PoolDays)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PoolSize)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.PoolReviews)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
