Added hide.cshtml in Swimming folder , getting errors , solving errors , working in hide and index.cshtml , commiting to assignment 2

--- a/Views/Swimming/Hide.cshtml
+++ b/Views/Swimming/Hide.cshtml
@@ -24,7 +24,7 @@
         <input type="submit" value="Submit" />
     </p>
 </form>
-<form asp-action="Hide" method="post">
+<form asp-action="Hide">
 <table class="table">
     <thead>
         <tr>
@@ -99,6 +99,4 @@
 </table>
 <input type="submit" value="Hide Selected" class="btn" />
 
-
 </form>
-<a asp-action="Hide" asp-controller="Swimming">Hidden Records</a>
