started working on point 6 , did changes inside swimmingcontroller.cs changed index to deleteall , which changes the website , while eating apples .

--- a/Views/Swimming/Hide.cshtml
+++ b/Views/Swimming/Hide.cshtml
@@ -24,7 +24,7 @@
         <input type="submit" value="Submit" />
     </p>
 </form>
-<form asp-action="Hide">
+<form asp-controller="Swimming" asp-action="DeleteAll">
 <table class="table">
     <thead>
         <tr>
@@ -97,6 +97,6 @@
 }
     </tbody>
 </table>
-<input type="submit" value="Hide Selected" class="btn" />
+<input type="submit" value="DeleteAll" class="btn" />
 
 </form>
