point 7 started , worked on the delete records in swimmingcontroller.cs , and worked on my seeddata.cs , had to do some changes

--- a/Views/Swimming/Index.cshtml
+++ b/Views/Swimming/Index.cshtml
@@ -102,3 +102,4 @@
 
 </form>
 <a asp-action="Hide" asp-controller="Swimming">Hidden Records</a>
+<a asp-action="DeleteAlll" asp-controller="Swimming">Delete Records</a>
